# weather

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  Senza nome 1.odt  TO_DO.md  about.py  add_help_translations.py  config.json  config.py  config_utils.py  favorites.json  favorites.py  favorites_utils.py  help.py  icon_utils.py  log_viewer.py  main.py  menu.py  pyinstaller_build_win.py  pyproject.toml  requirements.txt  sponsor.py  temp_map.html  themes.py  translation_report.txt  translations.py  translations_utils.py  updates.json  updates.py  version.py  version.txt  weather.bat  weather.py  weather_api.py  weather_app.py
.github/: CODEOWNERS  FUNDING.yml
assets/: version_info.txt
config/: config.json  favorites.json  features.json  geocode_cache.json  history.json  notifications.json  plugins.json  providers.json  updates.json
config/notifications/: settings.json
docs/: API_KEYS.md  SECURITY.md  WEATHER_PROVIDERS.md  Weather_Providers.md  configuration.md  development.md  index.md  installation.md  plugin_system.md  providers.md  translations.md  troubleshooting.md  usage.md
history/: weather_history.json
lang/: __init__.py  language_manager.py
lang/translations/: ar.json  de.json  en.json  es.json  fr.json  he.json  hu.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json
plugins/features/: __init__.py  enh_not_features.py  example_features.py  history_features.py
plugins/weather_providers/: __init__.py  accuweather_plugin.py  example_plugin.py  example_provider.py  openmeteo_plugin.py  openweathermap_plugin.py
script/: about.py  api.py  api_key_manager.py  config.py  config_utils.py  docs.py  favorites.py  favorites_dialog.py  favorites_utils.py  feature_config_dialog.py  help.py  history_utils.py  icon_utils.py  log_viewer.py  logger.py  maps_dialog.py  md_viewer.py  menu.py  notifications.py  plugin_config_dialog.py  resources.py  setup_owm_api.py  sponsor.py  themes.py  translations.py  translations_utils.py  ui.py  update_legacy_imports.py  updates.py  version.py
script/documentation/: CHANGELOG.json  CODE_OF_CONDUCT.json  CONTRIBUTING.json  README.json  development.json  index.json  installation.json  translations.json  troubleshooting.json  usage.json
script/plugin_system/: __init__.py  feature.py  feature_manager.py  legacy_compat.py  plugin_manager.py  weather_provider.py
script/weather_providers/: __init__.py  accuweather.py  alliander.py  api_key_manager.py  base_provider.py  breezyweather.py  openmeteo.py  openweathermap.py  quickweather.py  weatherapi.py  weathercompany.py  weatherdotcom.py
scripts/: README.md  SCRIPT.md  add_help_translations.py  add_menu_translations.py  analyze_translations.py  download_weather_icons.py  move_assets.py  sync_translations.py  update_translations.py
setup/: version.txt
tests/: TEST.md  test_api_key_manager.py  test_enhanced_notifications.py  test_log.py  test_maps_dialog.py  test_menu.py  test_owm.py  test_plugin_loading.py  test_plugin_system.py  test_providers.py  test_ui.py  test_updates.py  test_version.py
weather_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
