[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app"
version = "1.3.0"
description = "A weather application with a graphical user interface"
readme = "README.md"
authors = [
    { name = "Nsfr750", email = "nsfr750@yandex.com" }
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "wand>=0.6.11",
    "qrcode>=7.4.2",
    "pyperclip>=1.8.2",
    "pywin32>=306; sys_platform == 'win32'",
    "psutil>=5.9.5",
    "PyQt6>=6.5.0",
    "PyQt6-Qt6>=6.5.0",
    "PyQt6-sip>=13.5.0",
    "PyQt6-WebEngine>=6.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-qt>=4.2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0.1",
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.1.21",
    "pre-commit>=3.3.3"
]

[project.scripts]
weather-app = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["script/*", "main.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["script"]
omit = [
    "**/tests/*",
    "**/__pycache__/*",
    "**/version.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass"
]
