[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app"
version = "1.4.0"
description = "A modern, feature-rich weather application with support for multiple providers and languages"
readme = "README.md"
authors = [
    { name = "Nsfr750", email = "nsfr750@yandex.com" }
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
    "Topic :: Weather",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "wand>=0.6.11,<1.0.0",
    "qrcode>=7.4.2,<8.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    "pywin32>=306,<308; sys_platform == 'win32'",
    "psutil>=5.9.5,<6.0.0",
    "PyQt6>=6.5.0,<7.0.0",
    "PyQt6-Qt6>=6.5.0,<7.0.0",
    "PyQt6-sip>=13.5.0,<14.0.0",
    "PyQt6-WebEngine>=6.5.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytz>=2023.3,<2024.0",
    "python-dateutil>=2.8.2,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-qt>=4.2.0,<5.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "types-requests>=2.31.0.1,<3.0.0",
    "pre-commit>=3.3.3,<4.0.0",
    "mkdocs>=1.5.2,<2.0.0",
    "mkdocs-material>=9.1.21,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0",
    "sphinx>=7.1.2,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "sphinx-autodoc-typehints>=1.24.0,<2.0.0"
]

docs = [
    "mkdocs>=1.5.2,<2.0.0",
    "mkdocs-material>=9.1.21,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0"
]

test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-qt>=4.2.0,<5.0.0",
    "pytest-xdist>=3.3.0,<4.0.0"
]

[project.scripts]
weather-app = "script.main:main"

[project.urls]
Homepage = "https://github.com/Nsfr750/weather"
Documentation = "https://nsfr750.github.io/weather/"
Repository = "https://github.com/Nsfr750/weather"
Issues = "https://github.com/Nsfr750/weather/issues"
Discord = "https://discord.gg/ryqNeuRYjD"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# Files matching break-black
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | _build
  | build
  | dist
  | venv
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=script --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
